# gr-winelo

./: AUTHORS  CMakeLists.txt
apps/: old_server.py  server.py
docs/: Makefile
docs/doxygen/: Doxyfile.in
docs/source/: channel_example.rst  conf.py  index.rst  winelo_channel.rst  winelo_client.rst  winelo_server.rst
grc/: CMakeLists.txt  winelo_compare_2streams_sink_c.xml  winelo_cost207_bad_urban_6paths.xml  winelo_cost207_hilly_terrain_6paths.xml  winelo_cost207_rural_area_4path.xml  winelo_cost207_rural_area_4paths.xml  winelo_cost207_typical_urban_6paths.xml  winelo_count_samples_cc.xml  winelo_cs_meas_cc.xml  winelo_evm_cc.xml  winelo_gauss_rand_proc_c.xml  winelo_gauss_rand_proc_f.xml  winelo_heart_beat.xml  winelo_mpc_channel_cc.xml  winelo_mrc_vcc.xml  winelo_rayleigh_cc.xml  winelo_sim_sink_c.xml  winelo_sim_source_c.xml
include/: CMakeLists.txt  winelo_api.h  winelo_evm_cc.h  winelo_mpc_channel_cc.h
include/winelo/: CMakeLists.txt  api.h  evm_cc.h  mpc_channel_cc.h
lib/: CMakeLists.txt  evm_cc_impl.cc  evm_cc_impl.h  mpc_channel_cc_impl.cc  mpc_channel_cc_impl.h  winelo_evm_cc.cc  winelo_mpc_channel_cc.cc
orc/: volk_32fc_x2_add_32fc_a_orc_impl.orc
python/: CMakeLists.txt  __init__.py  heart_beat.py  libnoise.py  qa_winelo_evm_cc.py  qa_winelo_mpc_channel_cc.py
python/channel/: CMakeLists.txt  __init__.py  gauss_rand_proc_c.py  gauss_rand_proc_f.py  rayleigh_cc.py  spec2soc.py  spec2sos.py
python/client/: CMakeLists.txt  __init__.py  client.py  mrc_vcc.py  sim_sink_c.py  sim_source_c.py  tcp_blocks.py  (+2 more)
swig/: CMakeLists.txt  winelo_swig.i
(+43 files in other folders)
